address code style errors; update pom.xml